--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
         let currentMaskIndex = 0;
 
         // GitHub config for direct publishing
-        const GITHUB_REPO = 'DurrellBishop-iCloud/MSK2';
+        const GITHUB_REPO = 'DurrellBishop-iCloud/m';
         const GITHUB_BRANCH = 'main';
 
         // ============================================
